src/objects/Time_sheet__c.object
<CustomObject>
    <description>This object is used to track the time spent by the volunteer contact to close the wish or Non Wish &amp; Event</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>This field is used to track the date value of when volunteer is entered.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used to store the value of description entered by the volunteer.</description>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Hidden__c</fullName>
        <description>This field is used as hidden field to store the hours value.</description>
        <label>Hours Hidden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_spent__c</fullName>
        <description>This field is used to track how many hours the volunteer have spent for the volunteer opportunity.</description>
        <inlineHelpText>Please enter two digits on decimal place.</inlineHelpText>
        <label>Hours spent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Opportunity__c</fullName>
        <description>This field is used to store the volunteer opportunity records.</description>
        <label>Volunteer Opportunity</label>
        <referenceTo>Volunteer_Opportunity__c</referenceTo>
        <relationshipLabel>Time sheet</relationshipLabel>
        <relationshipName>Time_sheet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Time sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Hours_Hidden__c</columns>
        <columns>Hours_spent__c</columns>
        <columns>Volunteer_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time sheet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <description>Date Validation is used to restrict enter the date from the future date.</description>
        <errorConditionFormula>Date__c &gt;  TODAY()&amp;&amp; ($Profile.Name  != &apos;Integration&apos;)</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>The Date should not be future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Hours_spent__c &gt; 24 &amp;&amp;  $Profile.Name  != &apos;Integration&apos;</errorConditionFormula>
        <errorMessage>Hours should be with in 24 hours.</errorMessage>
    </validationRules>
</CustomObject>